# python-project-template

./: .copilot-instructions.md  .gitignore  CHANGELOG.md  Makefile  README.md  TEMPLATE_README.md  pyproject.toml  requirements-dev.txt  setup_project.py  test_hello_world.py
.github/workflows/: ci.yml
docs/: API.md  USAGE.md
examples/: advanced_usage.py  basic_usage.py  hello_world.py
src/test_project/: __init__.py  config.py  core.py  utils.py
src/{{MODULE_NAME}}/: __init__.py  config.py  core.py  py.typed  utils.py
tests/: conftest.py  test_test_project.py  test_{{MODULE_NAME}}.py
